...
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
    "Courier New" : {

    },
    "CPU" : {

    },
    "Create" : {

    },
    "Create a new Claude Code session in ILS" : {

    },
    "Create a new session to chat with Claude Code." : {
...
            "value" : "MCP-Server"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "MCP Servers"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Servidores MCP"
...
    "New Recording" : {

    },
    "New Rule" : {

    },
    "New Session" : {

    },
    "New Template" : {

    },
    "New Theme" : {
...
    "No project: Start without a project context" : {

    },
    "No projects" : {

    },
    "No Projects" : {

    },
    "No projects found" : {

    },
    "No projects yet" : {
...
            "value" : "Keine Sitzungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Sessions"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sin sesiones"
...
            "value" : "Erweiterungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plugins"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Complementos"
...
    "Project status unavailable — offline" : {

    },
    "Project: %@" : {

    },
    "Projects" : {

    },
    "Prompt" : {

    },
    "Prompt Suggestions" : {
...
    "Session recording export" : {

    },
    "Session Suggestions" : {

    },
    "Sessions" : {

    },
    "SESSIONS" : {

    },
    "Sessions — Large" : {
...
            "value" : "Fahigkeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Skills"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Habilidades"
...
